Added the auth middleware

--- a/apps/http-server/package.json
+++ b/apps/http-server/package.json
@@ -16,6 +16,8 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.0",
-    "express": "^4.21.2"
+    "@types/jsonwebtoken": "^9.0.9",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
