--- a/apps/http-server/package.json
+++ b/apps/http-server/package.json
@@ -8,17 +8,19 @@
     "dev": " npm run build && npm run start"
   },
   "devDependencies": {
-    "@repo/typescript-config": "*",
-    "@repo/backend-common":"*",
-    "@repo/common":"*"
+    "@repo/backend-common": "*",
+    "@repo/common": "*",
+    "@repo/typescript-config": "*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
+    "bcrypt": "^5.1.1",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2"
   }
