--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,16 +14,17 @@
     "@repo/ui": "*",
     "next": "^15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
+    "@repo/common": "*",
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
     "@types/node": "^22",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "eslint": "^9.21.0",
-    "typescript": "5.7.3",
-    "@repo/common": "*"
+    "typescript": "5.7.3"
   }
 }
